# astro-cosmos

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.astro/: config.yaml
dags/: main_brew_pipeline.py
dags/dbt_cosmos/: .user.yml  dbt_project.yml  profiles.yml  sources.yml
dags/dbt_cosmos/models/: bronze.sql  gold.sql  silver.sql
